tmp/funnel-output_path-j4yRtZVE.tmp/gyak09/tests/unit/pods/errors/view/route-test.jshint.js
/home/ubuntu/workspace/tmp/jshinter-output_path-XvfOvFHQ.tmp/unit/pods/errors/view/route-test.jshint.js